@startuml
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam classAttributeIconSize 0

class User {
  +int id
  +string name
  +string email
  +string password
  +datetime email_verified_at
}

class AuditLog {
  +int id
  +int user_id
  +string user_email
  +string user_role
  +string action
  +string entite
  +int entite_id
  +json donnees_avant
  +json donnees_apres
  +string ip_address
  +datetime created_at
}

class Notification {
  +int id
  +int user_id
  +string type
  +string titre
  +string message
  +json data
  +bool lue
  +datetime lue_at
}

class Service {
  +int id
  +string keyword
  +string nom_service
  +string nom_fournisseur
  +decimal prix
  +bool actif
}

class Reclamation {
  +int id
  +string msisdn
  +int service_id
  +string description
  +string statut
}

class Cdr {
  +int id
  +string a_msisdn
  +string keyword
  +date start_date
  +decimal charge_amount
  +string subscriber_type
  +string service_type
  +string event_status
}

class EtlJob {
  +int id
  +string job_name
  +string category
  +string source
  +string status
  +datetime started_at
  +datetime finished_at
  +int duration_ms
  +int rows_processed
  +int rows_inserted
  +int rows_skipped
  +json metadata
  +json metrics
}

class Import {
  +int id
  +string filename
  +string type
  +string status
  +int total_rows
  +int imported_rows
  +int error_rows
  +string error_message
  +string imported_by
  +datetime started_at
  +datetime finished_at
}

' Relations observées dans le code
User "1" -- "*" AuditLog : genere
User "1" -- "*" Notification : a
Service "1" -- "*" Reclamation : gere
Service "1" -- "*" Cdr : associe (par service_type/keyword)
EtlJob "1" -- "*" Import : lance (optionnel — relation logique)

@enduml
